<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/User_Profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Manage_Invoice" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Manage_Inventory" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Manage_Cost" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Send" />
        </menu>
    </item>

</menu>
